Fixed align issue + formatting

--- a/Stage 5/html page yuconz/Corpus/css/styles.css
+++ b/Stage 5/html page yuconz/Corpus/css/styles.css
@@ -91,8 +91,12 @@ a {
 	background-color: rgb(245, 245, 245);
 }
 
-.information {
-  float: right;
+.textArea {
+  margin-left: 25%;
+}
+
+.dropdown-title {
+  text-align: center;
 }
 
 #menu {
